--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,24 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="h1">Login into you DojoTweet account</h1>
+        <h2>Login into your DojoTweet account</h2>
+        <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <small hidden id="password_help" class="form-text text-muted">Password should be more than 5 characters and contain at least one special character, one upper letter case and one number.</small>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+          </form>
+          <div class="sign_up">
+            <h4>New to DojoTweet? </h4>
+            <a href="#"><h4>Sign up </h4></a>
+          </div>
+         
     </div>
 </body>
 </html>
