--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-    <title>Index</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="container">
@@ -14,11 +14,11 @@
         <form action="/login" method="POST">
             <div class="form-group">
               <label >Email address</label>
-              <input type="email" name="email" class="form-control"  name="email" placeholder="Enter email">
+              <input type="email" name="email" class="form-control"  placeholder="Enter email">
             </div>
             <div class="form-group">
               <label>Password</label>
-              <input type="password" class="form-control" name="password" placeholder="Password">
+              <input type="password" class="form-control"  placeholder="Password">
               {% with psw_error = get_flashed_messages(category_filter=["password_error"]) %}
               {% if psw_error %}
                   {%- for msg in psw_error %}
