--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -6,9 +6,61 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-    <title>Document</title>
+    <title>Sign up</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Sign up for a  DojoTweet account</h2>
+        <form action="/signup" method="POST">
+            <div class="form-group">
+                <label >First Name</label>
+                <input type="text"  class="form-control"  name="fname" placeholder="Enter your first name">
+              </div>
+              <div class="form-group">
+                <label >Last Name</label>
+                <input type="text" name="lname" class="form-control"   placeholder="Enter your last name">
+              </div>
+            <div class="form-group">
+              <label >Email address</label>
+              <input type="email" name="email" class="form-control"  name="email" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label>Password</label>
+              <input type="password" class="form-control" name="password" placeholder="Password">
+              {% with psw_error = get_flashed_messages(category_filter=["password_error"]) %}
+              {% if psw_error %}
+                  {%- for msg in psw_error %}
+                  <small  id="password_help" class="form-text text-muted">{{ msg }}</small>
+                  {% endfor %}
+              {% endif %}
+          {% endwith%}
+              <small hidden id="password_help" class="form-text text-muted">Password should be more than 5 characters and contain at least one special character, one upper letter case and one number.</small>
+            </div>
+            <div class="form-group">
+                <label>Confirm Password</label>
+                <input type="password" class="form-control" name="confirm_password" placeholder="Confirm password">
+                {% with psw_error = get_flashed_messages(category_filter=["password_error"]) %}
+                {% if psw_error %}
+                    {%- for msg in psw_error %}
+                    <small  id="password_help" class="form-text text-muted">{{ msg }}</small>
+                    {% endfor %}
+                {% endif %}
+            {% endwith%}
+              </div>
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+            {% with login_error = get_flashed_messages(category_filter=["login_error"]) %}
+            {% if login_error %}
+                {%- for msg in login_error %}
+                <small  id="password_help" class="form-text text-muted">{{ msg }}</small>
+                {% endfor %}
+            {% endif %}
+        {% endwith%}
+          </form>
+          <div class="sign_up">
+            <h4>Already have an account? </h4>
+            <a href="/"><h4>Log in</h4></a>
+          </div>
+         
+    </div>
 </body>
 </html>
