Added sign up logic on the server and a logout button

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-    <title>Document</title>
+    <title>Dojo Tweets Dashboard</title>
 </head>
 <body>
-    
+    <a href="/logout"><h4>Log out</h4></a>
 </body>
 </html>
