--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
               <label>Password</label>
-              <input type="password" class="form-control"  placeholder="Password">
+              <input type="password" class="form-control" name="password" placeholder="Password">
               {% with psw_error = get_flashed_messages(category_filter=["password_error"]) %}
               {% if psw_error %}
                   {%- for msg in psw_error %}
