--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,7 @@
 body{
     background-color: #E6ECF0;
 }
-form{
+form.login{
     background-color: white;
     padding: 25px;
 }
@@ -15,3 +15,73 @@ form{
 .sign_up h4{
     padding: 5px;
 }
+
+header{
+    display: flex;
+    justify-content: space-between;
+    background-color: #007394;
+    padding: 0 5px;
+    color: white;
+}
+div.right_corner{
+    display: flex;
+}
+div.right_corner h4{
+    padding-right: 25px;
+}
+div.right_corner a{
+    color: #007394;
+    background-color: white;
+    margin: 5px;
+    padding: 5px;
+   text-decoration: none;
+}
+
+main{
+    padding: 0 5px;
+}
+
+textarea#styled {
+	width: 600px;
+	height: 120px;
+	border: 3px solid #cccccc;
+	padding: 5px;
+	font-family: Tahoma, sans-serif;
+	background-image: url(bg.gif);
+	background-position: bottom right;
+	background-repeat: no-repeat;
+}
+
+form.tweet {
+    color: white;
+    display: flex;
+    align-items: flex-end;
+}
+form.tweet button{
+    background-color: #007394;
+    color: white;
+    width: 50px;;
+    padding: 5px;
+    margin: 0 10px;
+    border: 0px;
+}
+div.tweets{
+    background-color: #3C4C5B;
+    color: white;
+    padding: 1px 5px;
+    margin: 15px 0;
+    height:900px;
+}
+
+.card {
+    margin: 0 auto;
+    background-color:#6c7b89;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 55%;
+    border-radius: 5px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
