--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h2>Sign up for a  DojoTweet account</h2>
-        <form action="/signup" method="POST">
+        <form  class='login' action="/signup" method="POST">
             <div class="form-group">
                 <label >First Name</label>
                 <input type="text"  class="form-control"  name="fname" placeholder="Enter your first name">
