--- a/static/css/index.css
+++ b/static/css/index.css
@@ -53,7 +53,6 @@ textarea#styled {
 }
 
 form.tweet {
-    color: white;
     display: flex;
     align-items: flex-end;
 }
@@ -79,6 +78,7 @@ div.tweets{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 55%;
+    margin-bottom: 15px;
     border-radius: 5px;
   }
   
