--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -72,6 +72,7 @@
                    
                     {% if tweet.user_id == session['userid'] %}
                     <button><a href='/tweet/delete/{{tweet.tweet_id}}'>Delete</a></button>
+                    <button><a href='/edit/{{tweet.tweet_id}}'>Edit</a></button>
                     {%endif%}
                    
                 </div>
