Added AJAX to validate if an email already exsist

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,6 +8,14 @@ form.login{
 #password_help{
     color: tomato;
 }
+
+.error{
+    color: tomato;
+}
+
+.success{
+    color: green;
+}
 .sign_up{
     display: flex;
 }
