--- a/templates/users.html
+++ b/templates/users.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
     <title>Users</title>
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous">
+    </script>
 </head>
 <body class="container">
         <header>
@@ -18,6 +23,7 @@
                 <a href="/logout">Log out</a>
             </div>
         </header>
+         <input id="search" name='search' type="text" placeholder="Search users">
         <table class="table table-striped">
                 <thead>
                   <tr>
@@ -27,6 +33,7 @@
                
                   </tr>
                 </thead>
+              
                 <tbody>
                     {% for user in users: %}
                   <tr>
@@ -46,3 +53,20 @@
               </table>
 </body>
 </html>
+<script>
+  $(document).ready(function(){
+    $("#search").keyup(function(){
+      $.ajax({
+        url: '/search_users',
+        method: 'POST',
+        data: {"search": $("#search").val()}
+      })
+      .done(function(response){
+       $('tbody').html(response)
+      })
+
+    })
+  } )
+
+
+</script>
